<resources>
    <string name="app_name">Ihor</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="inbox">INBOX</string>
    <string name="account">ACCOUNT</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="street_address">Street Address</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="splash_screen">SPLASH SCREEN</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="map">map</string>
    <string name="ride_history">   Ride history</string>
    <string name="where_to">&#160; Where to?</string>
    <string name="new_ride">New ride!</string>
    <string name="past_rides">Past rides</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="ride_plan">Ride plan</string>
    <string name="title">title</string>
    <string name="icon">icon</string>
    <string name="about">About</string>
    <string name="settings">&#160; Settings</string>
    <string name="notifications">Notifications</string>
    <string name="payments">Payments</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="chat">Chat</string>
    <string name="message">&#160; Message</string>
    <string name="search">&#160; Search</string>
    <string name="rating_for_your_expirience">Rating for your expirience</string>
    <string name="rate_your_ride">Rate your ride</string>
    <string name="passengers">Passengers:</string>
    <string name="price">Price:</string>
    <string name="driver">Driver</string>
    <string name="distance">Distance:</string>
    <string name="see_offers_for_this_route">See offers for this route</string>
    <string name="set_as_a_favorite_route">Set as a favorite route</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="favourite_routes">Favourite routes</string>
    <string name="report">Report</string>
    <string name="passenger">Passenger</string>
    <string name="statistics">Statistics</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Log_in">Log in</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="rejection_reason">&#160; Rejection reason</string>
    <string name="route">Route</string>
    <string name="invite">Invite</string>
    <string name="more">More</string>
    <string name="confirm">Confirm</string>
    <string name="overview">Overview</string>
    <string name="type_email">&#160; Type email</string>
    <string name="pets_allowed">Pets allowed</string>
    <string name="baby_allowed">Baby allowed</string>
    <string name="confirm_your_ride">Confirm your ride</string>
    <string name="other_passengers">Other passengers</string>
    <string name="back_to_home">Back to home</string>
    <string name="cancel">Cancel</string>
    <string name="only_you">Only you</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_passwrod">Forgot passwrod</string>
    <string name="forgot_password_hint">Please enter the email you use to log in to Ihor.</string>
    <string name="request_password_reset">Request password reset</string>
    <string name="back_to">Back to</string>
    <string name="save_new_password">SAVE NEW PASSWORD</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
</resources>