<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/basic_toolbar" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_lock_clock_48"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_password"
            android:gravity="center_horizontal"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="20sp"
            android:text="@string/forgot_password_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:labelFor="@+id/editTextEmail"
            android:layout_marginTop="20dp"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:paddingHorizontal="5dp"
            android:inputType="textEmailAddress" />






        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/quantum_bluegrey700"
            android:textStyle="bold"
            android:text="@string/request_password_reset"
            android:textSize="16sp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp">
            <TextView
                android:id="@+id/account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/loginLinkButton"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_toEndOf="@id/account_text"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>