<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/basic_toolbar" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_lock_48"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Change your password"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:labelFor="@+id/editTextOldPassword"
            android:text="@string/current_password" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:paddingHorizontal="5dp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:labelFor="@+id/editTextNewPassword"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:paddingHorizontal="5dp"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:labelFor="@+id/editTextConfirmPassword"
            android:text="@string/confirm_new_password" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:paddingHorizontal="5dp"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/changeButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/quantum_bluegrey700"
            android:textStyle="bold"
            android:text="@string/save_new_password"
            android:textSize="16sp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp">
            <TextView
                android:id="@+id/account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_to"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/accountLinkButton"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_toEndOf="@id/account_text"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>