<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PassengerMainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/basic_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:id="@+id/passengerCurrRideContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="65dp"
                >

                <com.shuhart.stepview.StepView
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:sv_doneCircleColor="@color/yellow"
                    app:sv_doneCircleRadius="12dp"
                    app:sv_doneStepLineColor="@color/yellow"
                    app:sv_doneStepMarkColor="@color/black"
                    app:sv_doneTextColor="@color/black"
                    app:sv_nextStepCircleColor="@color/light_grey"
                    app:sv_nextStepLineColor="@color/black"
                    app:sv_nextTextColor="@color/black"
                    app:sv_selectedCircleColor="@color/yellow"
                    app:sv_selectedCircleRadius="15dp"
                    app:sv_selectedStepNumberColor="@color/black"
                    app:sv_selectedTextColor="@color/black"
                    app:sv_stepLineWidth="2dp"
                    app:sv_stepNumberTextSize="18sp"
                    app:sv_stepPadding="4dp"
                    />

                <GridLayout
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/step_view"
                    android:columnCount="6"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    tools:context=".GridXMLActivity"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="0dp"
                    android:translationZ="1dp"
                    >

                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/start"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/route"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/invite"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/more"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/confirm"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                    <TextView
                        android:textSize="12sp"
                        android:textColor="#000"
                        android:text="@string/overview"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:layout_marginBottom="15dp"
                        android:typeface="monospace"
                        android:layout_width="0dp"
                        android:layout_columnWeight="1"
                        tools:ignore="RtlCompat" />
                </GridLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/passengerMainContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/grid"
                    />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/passenger_navigation_drawer"
            android:layout_gravity="start"
            />

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>
